Add profiles in authors

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -79,20 +79,33 @@
 <section class="team">
     <h2>Meet the Team</h2>
     <div class="team-container">
+        <!-- Mitzael's Card -->
         <div class="team-member">
             <h3>Mitzael Pitre</h3>
             <p>Full Stack Developer</p>
             <div class="team-info">
                 <p>Led the full development of the game, including both front-end and back-end. Designed and implemented game mechanics, user interfaces, and server-side logic, ensuring seamless integration and functionality.</p>
+                <p>
+                    <a href="https://www.linkedin.com/in/mitzael-pitre-36b9b5215/" target="_blank">LinkedIn</a> | 
+                    <a href="https://github.com/MitzaelPitre" target="_blank">GitHub</a>
+                </p>
             </div>
         </div>
+        
+        <!-- Steven's Card -->
         <div class="team-member">
             <h3>Steven Rosario</h3>
             <p>Back-End Developer</p>
             <div class="team-info">
                 <p>Contributed ideas for the back-end architecture and played a key role in shaping the server-side structure, providing valuable input to the overall system design.</p>
+                <p>
+                    <a href="https://www.linkedin.com/in/steven-rosario-08695b265/" target="_blank">LinkedIn</a> | 
+                    <a href="https://github.com/SilverDontAsk" target="_blank">GitHub</a>
+                </p>
             </div>
         </div>
+
+        <!-- William's Card -->
         <div class="team-member">
             <h3>William Pellot</h3>
             <p>Front-End Developer</p>
